--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
     <title>Landing Page</title>
 </head>
 <body>
-    <header>
+    <header style="overflow-y: hidden;">
         <nav class="header__nav container">
-                <a href="#"><img src="/Assets/Logo.svg" alt="LOGO"></a>
+                <a href="#"><img src="Assets/Logo.svg" alt="LOGO"></a>
         </nav>
         <div class="header__hero-img">
-
+            <img src="Assets/Hero Image.jpg" alt="" style="background-size: cover;overflow-y: hidden;">
         </div>
         <div class="header__hero container">
                     <h1>Explore the best camps on Earth.</h1>
                     <p>YelpCamp is a curated list of the best camping spots on Earth. Unfiltered and un biased reviews.</p>
                         <div class="header__feature">
-                            <img src="/Assets/Checkmark.svg" alt="Checkmark">
+                            <img src="Assets/Checkmark.svg" alt="Checkmark">
                             <p>Add your own camp suggestions.</p>
                         </div>
                         <div class="header__feature">
-                            <img src="/Assets/Checkmark.svg" alt="Checkmark">
+                            <img src="Assets/Checkmark.svg" alt="Checkmark">
                             <p>Leave reviews and experiences.</p>
                         </div>
                         <div class="header__feature">
-                            <img src="/Assets/Checkmark.svg" alt="Checkmark">
+                            <img src="Assets/Checkmark.svg" alt="Checkmark">
                             <p>See locations for all camps.</p>
                         </div>
-                    <a href="#" target="_blank" class="header__btn">
+                    <a href="src/anc.html" target="_blank" class="header__btn">
                         <button class="header__btn__button">
                             View Campgrounds
                         </button>
@@ -39,9 +39,9 @@
                     <div class="header__partner">
                         <p>Partnered with:</p>
                         <div class="header__partner-list">
-                            <img src="/Assets/Airbnb.svg" alt="Airbnb">
-                            <img src="/Assets/Booking.svg" alt="Booking">
-                            <img src="/Assets/Plum Guide.svg" alt="Plum Guide">
+                            <img src="Assets/Airbnb.svg" alt="Airbnb">
+                            <img src="Assets/Booking.svg" alt="Booking">
+                            <img src="Assets/Plum Guide.svg" alt="Plum Guide">
                         </div>
                     </div>
         </div>
