--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         </div>
         <div class="header__hero container">
                     <h1>Explore the best camps on Earth.</h1>
-                    <p>YelpCamp is a curated list of the best camping spots on Earth. Unfiltered and un biased reviews.</p>
+                    <p> Cep telefonları öğrencinin ders sırasında konsantre olmasını zorlaştırmaktadır.  Cep telefonu zil sesi, mesaj uyarıları ve bazı bildirimler veya titreşimler sınıfta parazite neden olur.  Bazı öğrenciler ders sırasında cep telefonlarını kullanabilir, bu da derse müdahale edebilir.
+
+Telefon, doğası gereği bağımlılık yapan farklı türde oyunlar, sosyal medya uygulamaları, mesajlaşma uygulamaları sunar.  Akıllı telefon sanal dünyanın en iyi arkadaşı haline geldi ve öğrencilerin gerçek dünyayla olan bağlantısını kopardı.
+
+   Telefonda çok fazla zaman geçiren öğrenciler, çalışmalarını doğrudan etkileyebilir ve öğrenme potansiyellerini azaltabilir.</p>
                         <div class="header__feature">
                             <img src="Assets/Checkmark.svg" alt="Checkmark">
                             <p>Add your own camp suggestions.</p>
